# Thoreyes_ros_alg_2_multi

alg_module_base/: CMakeLists.txt
alg_module_base/doc/: api_document.md
alg_module_base/include/: alg_module_base.h  alg_module_base_private.h  common.h  error_type.h  inout_type.h  post_process_cfg_base.h  publish_cfg_base.h  tr_cfg_type_base.h
alg_module_base/include/cv_lib/: type_def.h
alg_module_base/include/network_engine/: device_handle.h  network_kernel.h  network_parallel.h
alg_module_base/include/network_engine/bm/: device_handle_bm.h
alg_module_base/include/network_engine/hw/: device_handle_hw.h
alg_module_base/include/network_engine/torch/: device_handle_torch.h
alg_module_base/include/network_engine/torch_pre_abi/: device_handle_torch.h  torch_pre_abi_interface.h
alg_module_base/include_private/cv_lib/bm/: type_def_bm.h
alg_module_base/include_private/cv_lib/cuda/: type_dev_cuda.h
alg_module_base/include_private/cv_lib/cv/: type_def_cv.h
alg_module_base/include_private/cv_lib/cvcuda/: type_def_cvcuda.h
alg_module_base/include_private/cv_lib/hw/: type_def_hw.h
alg_module_base/include_private/network_engine/bm/: network_kernel_bm.h
alg_module_base/include_private/network_engine/hw/: network_kernel_hw.h
alg_module_base/include_private/network_engine/torch/: network_kernel_torch.h
alg_module_base/include_private/network_engine/torch_pre_abi/: network_kernel_torch.h
alg_module_base/project/: CMakeLists.txt  gen_cmakelist.py  make.sh  make_install.sh
alg_module_base/project/base_define/: base.json  bm.json  ix.json  ix_cvcuda.json  nv.json  nv_cvcuda.json
alg_module_base/project/lib/bm/: CMakeLists.txt
alg_module_base/project/lib/nv_cvcuda/: CMakeLists.txt
alg_module_base/project/sub_module_define/: base.json  bm.json  ix.json  ix_cvcuda.json  nv.json  nv_cvcuda.json
alg_module_base/src/: alg_module_base.cpp  alg_module_base_private.cpp  common.cpp  network_kernel.cpp  network_parallel.cpp  tr_cfg_type_base.cpp
alg_module_base/src/cv_lib/: type_def.cpp
alg_module_base/src/cv_lib/bm/: type_def_bm.cpp
alg_module_base/src/cv_lib/cuda/: type_def_cuda.cpp
alg_module_base/src/cv_lib/cv/: type_def_cv.cpp
alg_module_base/src/cv_lib/cvcuda/: type_def_cvcuda.cpp
alg_module_base/src/cv_lib/hw/: type_def_hw.cpp
alg_module_base/src/network_engine/bm/: device_handle_bm.cpp  network_kernel_bm.cpp
alg_module_base/src/network_engine/hw/: device_handle_hw.cpp  network_kernel_hw.cpp
alg_module_base/src/network_engine/torch/: device_handle_torch.cpp  network_kernel_torch.cpp
alg_module_base/src/network_engine/torch_pre_abi/: .torch_pre_abi_interface.cpp.swp  device_handle_torch.cpp  network_kernel_torch.cpp  torch_pre_abi_interface.cpp
alg_module_base/test/: test_cv_lib.cpp
cuda_func/: CMakeLists.txt
cuda_func/include/: help_func.cuh
cuda_func/src/: help_func.cu
sub_modules/: gen_build_all_script.py  install_all.sh  make_all.sh
sub_modules/alg_module_burst_into_ban_detection/: .gitignore  README.md  main.cpp
sub_modules/alg_module_burst_into_ban_detection/include/: alg_module_burst_into_ban_detection.h
sub_modules/alg_module_burst_into_ban_detection/project/: CMakeLists.txt  gen_cmakelist.py  make.sh  make_install.sh
sub_modules/alg_module_burst_into_ban_detection/project/lib/nv_cvcuda/: CMakeLists.txt
sub_modules/alg_module_burst_into_ban_detection/src/: alg_module_burst_into_ban_detection.cpp
sub_modules/alg_module_bus_detection/: CMakeLists.txt  README.md  main.cpp  make.sh
sub_modules/alg_module_bus_detection/include/: alg_module_bus_detection.h  (+1 more)
sub_modules/alg_module_detect_tracking/: .gitignore  main.cpp
sub_modules/alg_module_license_plate_detection/: README.md  main.cpp
sub_modules/alg_module_license_plate_detection/project/test/: CMakeLists.txt
sub_modules/alg_module_license_plate_recognition/: .gitignore  README.md  main.cpp
sub_modules/alg_module_traffic_flow_detection/: .gitignore  CMakeLists.txt  README.md  main.cpp  main_nv.cpp  make.sh
sub_modules/alg_module_traffic_flow_detection/deepsort/include/: trajectory_tracker.h
sub_modules/alg_module_traffic_flow_detection/include/: alg_module_detect_tracking.h  alg_module_traffic_flow_detection.h  duplicate_remover.h  gen_cmakelist.py  trajectory_tracker.h
sub_modules/alg_module_traffic_flow_detection/project/: CMakeLists.txt  gen_cmakelist.py  make.sh  make_install.sh
sub_modules/alg_module_traffic_flow_detection/project/base_define/: base.json  bm.json  ix.json  nv.json
sub_modules/alg_module_traffic_flow_detection/project/lib/bm/: CMakeLists.txt
sub_modules/alg_module_traffic_flow_detection/project/lib/nv_cvcuda/: CMakeLists.txt
sub_modules/alg_module_traffic_flow_detection/project/test/: CMakeLists.txt
sub_modules/alg_module_traffic_flow_detection/requirement/cfgs/traffic_flow_detection/: model_ca.xml  module_cfg.xml
sub_modules/alg_module_traffic_flow_detection/src/: alg_module_traffic_flow_detection.cpp  duplicate_remover.cpp  trajectory_tracker.cpp
temp/alg_module_helmet_detect_in_region/: .gitignore  CMakeLists.txt  README.md  main.cpp  make.sh
tr_alg_engine/: CMakeLists.txt.bak  package.xml.bak  script.txt
tr_alg_engine/bak/: nvjpeg_decoder_helper.cpp  nvjpeg_decoder_helper.h  tr_device_manager_helper.cpp  tr_device_manager_helper.h
tr_alg_engine/include/: alg_engine.h  common.h  tr_alg_node_base.h
tr_alg_engine/node/: tr_alg_engine_main.cpp
tr_alg_engine/project/: gen_cmakelist.py  make.sh
tr_alg_engine/project/bm/: CMakeLists.txt  package.xml
tr_alg_engine/project/nv_cvcuda/: CMakeLists.txt  package.xml
tr_alg_engine/src/: alg_engine.cpp  common.cpp  tr_alg_node_base.cpp
tr_alg_engine/test_src/: test_submodule_reload.cpp
tr_alg_interfaces/: CMakeLists.txt  make.sh  package.xml
tr_alg_interfaces/msg/: AlgHeader.msg  ChannelList.msg  DeviceUsage.msg  ExtObjItem.msg  ExtResultItem.msg  ResultItem.msg  Results.msg
tr_alg_interfaces/srv/: GetAvaliableDevice.srv  GetChannelStatus.srv  GetModuleEnable.srv  SetChannelConfig.srv  SetModuleCfg.srv  SetModuleEnable.srv
(+119 files in other folders)
