cmake_minimum_required(VERSION 3.8)
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()
project(tr_alg_engine_nv_cvcuda)
include_directories(/data//thoreyes_nv/ros/alg_module_base/include/alg_module_base)
link_directories(/data//thoreyes_nv/ros/alg_module_base/lib)
set(tr_interfaces_DIR /data//thoreyes_nv/ros/thoreyes_base/install/share/tr_interfaces/cmake/)
set(tr_alg_interfaces_DIR /data//thoreyes_nv/ros/alg_module_interfaces/share/tr_alg_interfaces/cmake/)
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()
add_compile_options(-Wdeprecated-declarations -Wsign-compare)
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic )
endif()
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -fno-omit-frame-pointer")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
add_compile_options(-std=c++17)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(tr_alg_interfaces REQUIRED)
find_package(tr_interfaces REQUIRED)
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()
MESSAGE("System Arch: " ${CMAKE_SYSTEM_PROCESSOR})
if(CMAKE_SYSTEM_PROCESSOR MATCHES "amd64.*|x86_64.*|AMD64.*")
        set(X86_64 1)
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64.*|AARCH64.*|arm64.*|ARM64.*)")
        set(AARCH64 1)
endif()
set(Boost_DIR /usr/lib/x86_64-linux-gnu/cmake/Boost-1.74.0/)
find_package(Boost REQUIRED COMPONENTS stacktrace_addr2line stacktrace_backtrace NO_DEFAULT_PATH)
if (CMAKE_BUILD_TYPE EQUAL "Debug")
  ADD_DEFINITIONS(-DDEBUG_TRACE)
endif()
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIB_DIRS})
find_package(tinyxml2 REQUIRED)
include_directories(${TINYXML2_INCLUDE_DIRS})
link_directories(${TINYXML2_LIB_DIRS})
set(tinyxml2_LIBRARIES tinyxml2)
set(Torch_DIR  /opt/libtorch/share/cmake/Torch)
set(ATen_DIR  /opt/libtorch/share/cmake/ATen)
set(PYTORCH_DISABLE_TORCH_FUNCTION_DEPRECATION_WARNINGS 1)
find_package(Torch REQUIRED)
if(TORCH_FOUND)
  include_directories(${TORCH_INCLUDE_DIRS})
  message(STATUS "torch include ${TORCH_INCLUDE_DIRS}")
  link_directories(/opt/libtorch/lib)
  message(STATUS "torch libarys ${TORCH_LIBRARIES}")
  add_compile_options(${TORCH_CXX_FLAGS} -Wno-unused-parameter -Wsign-compare -Wvariadic-macros -Wunknown-pragmas)
else()
  message(ERROR "torch not found")

endif()
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${OpenCV_LIB_DIRS})
if(OpenCV_FOUND)
message(STATUS "OpenCV library status:")
message(STATUS "    config: ${OpenCV_DIR}")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
  else()
message(ERROR "opencv not found")
endif()
find_package(CUDA REQUIRED)
ADD_DEFINITIONS(-DUSE_FP16)
ADD_DEFINITIONS(-DUSE_CUDA)
ADD_DEFINITIONS(-DOPTIMIZE)
include_directories(${CUDA_INCLUDE_DIRS})
message(STATUS "cuda include ${CUDA_INCLUDE_DIRS}")
ADD_DEFINITIONS(-DNDEBUG -DSTRIP_ERROR_MESSAGES)
find_package(OpenMP REQUIRED)
if(OpenMP_FOUND)
  include_directories(${OpenMP_INCLUDE_DIRS})
  link_directories(${OpenMP_LIB_DIRS})
  set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} ${OPENMP_C_FLAGS})
  set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${OPENMP_CXX_FLAGS})
  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${CMAKE_CXX_FLAGS}")
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${CMAKE_CXX_FLAGS}")
  message(STATUS "openmp found")
  message(STATUS "CMAKE_CXX_FLAGS ${OpenMP_CXX_FLAGS}")
  message(STATUS "CMAKE_C_FLAGS ${OpenMP_C_FLAGS}")

else()
  set(OpenMP_LIBRARIES "")
endif()
set(cvcuda_INCLUDE_DIRS /opt/nvidia/cvcuda0/include)
set(cvcuda_LIB_DIRS /opt/nvidia/cvcuda0/lib)
  include_directories(${cvcuda_INCLUDE_DIRS})
  link_directories(${cvcuda_LIB_DIRS})
  ADD_DEFINITIONS(-DUSE_CVCUDA)

SET(CMAKE_BUILD_TYPE "Release")
include_directories(../.././include)
file(GLOB SRC_FILES ../../src/*.cpp)
file(GLOB SRC_FILES_tr_alg_engine ../../src/tr_alg_engine//*.cpp)
file(GLOB SRC_FILES_tr_alg_engine_P ../../src/tr_alg_engine/nv/*.cpp)
file(GLOB SRC_FILES_jpeg_decode ../../src/jpeg_decode//*.cpp)
file(GLOB SRC_FILES_jpeg_decode_P ../../src/jpeg_decode/nv/*.cpp)
file(GLOB SRC_FILES_moniter ../../src/moniter//*.cpp)
file(GLOB SRC_FILES_moniter_P ../../src/moniter/nv/*.cpp)
add_library(${PROJECT_NAME}_share SHARED ${SRC_FILES} ${SRC_FILES_tr_alg_engine} ${SRC_FILES_tr_alg_engine_P} ${SRC_FILES_jpeg_decode} ${SRC_FILES_jpeg_decode_P} ${SRC_FILES_moniter} ${SRC_FILES_moniter_P} )
ament_target_dependencies(${PROJECT_NAME}_share
rclcpp
sensor_msgs
rclcpp_action
tr_alg_interfaces
tr_interfaces
)
target_link_libraries(${PROJECT_NAME}_share
fmt::fmt-header-only ${FFMPEG_LIBS} ${OpenCV_LIBS} ${tinyxml2_LIBRARIES}  ${TORCH_LIBRARIES} -lcurl -ltiff -lnvidia-ml -lnvjpeg  ${Boost_LIBRARIES}  ${OpenMP_LIBRARIES}  nvcv_types cvcuda 
${tinyxml2_LIBRARIES} alg_module_base_share
)
install(DIRECTORY ../../include/ DESTINATION include/${PROJECT_NAME}/)
install(TARGETS ${PROJECT_NAME}_share EXPORT ${PROJECT_NAME}_share DESTINATION lib)
ament_export_targets(${PROJECT_NAME}_share HAS_LIBRARY_TARGET)
ament_export_dependencies(  
rclcpp
sensor_msgs
rclcpp_action
tr_alg_interfaces
tr_interfaces
)
ament_export_targets(${PROJECT_NAME}_share HAS_LIBRARY_TARGET)
ament_export_include_directories("include/${PROJECT_NAME}")
ament_export_libraries(${PROJECT_NAME}_share)
add_executable(tr_alg_engine_main ../.././node/tr_alg_engine_main.cpp)
target_link_libraries(tr_alg_engine_main ${PROJECT_NAME}_share)
install(TARGETS tr_alg_engine_main DESTINATION lib/${PROJECT_NAME})
ament_package()
add_executable(test_src_test_submodule_reload ../.././test_src/test_submodule_reload.cpp)
target_link_libraries(test_src_test_submodule_reload ${PROJECT_NAME}_share)
